fixed weird scrolling issue on homepage and added a minimum width for fixed position scrolling effect so it doesn't show up on mobile devices

--- a/src/app.css
+++ b/src/app.css
@@ -76,15 +76,21 @@ header {
 /*Homepage Styles*/
 .home {
 	background-image: linear-gradient(rgba(255,255,255,0.2), rgba(255,255,255,0.2)), url("../src/app/images/lost-paws-header.jpeg");
-	background-position: 60% 95px;
-	background-attachment: fixed;
-	background-repeat: no-repeat;
+
 	background-size: cover;
-	height: 50vh;
+	height: 20em;
 	padding-top: 3em;
 	padding-bottom: 3em;
 	color: white;
 	text-shadow: 2px 2px 5px rgba(0,0,0,0.5);
+}
+
+@media screen and (min-width: 800px){
+	.home {
+		background-position: 60% 95px;
+		background-attachment: fixed;
+		background-repeat: no-repeat;
+	}
 }
 
 /*
